--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kirz/expo-tunnelkit",
-  "version": "0.1.1",
+  "version": "0.1.1-alt.1",
   "description": "Expo module/wrapper for Tunnelkit VPN client library for Apple platforms.",
   "licenses": [
     {
@@ -16,8 +16,6 @@
     "clean": "expo-module clean",
     "lint": "expo-module lint",
     "test": "expo-module test",
-    "prepare": "expo-module prepare",
-    "prepublishOnly": "expo-module prepublishOnly",
     "expo-module": "expo-module",
     "open:ios": "xed example/ios",
     "open:android": "open -a \"Android Studio\" example/android"
